// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LtsaChargeSubForm component renders charge sub form 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c0 {
  font-weight: bold;
  border-bottom: 0.2rem solid;
  margin-bottom: 2rem;
}

<h2
    class="c0"
  >
    Charges, Liens and Interests
  </h2>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Nature:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.transactionType"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.transactionType"
          title="STATUTORY RIGHT-OF-WAY"
          value="STATUTORY RIGHT-OF-WAY"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registration #:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeNumber"
          title="H107642"
          value="H107642"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered date:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.applicationReceivedDate"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.applicationReceivedDate"
          title="1972-10-23T21:38:00Z"
          value="1972-10-23T21:38:00Z"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered owner:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          title="BRITISH COLUMBIA HYDRO AND POWER AUTHORITY"
          value="BRITISH COLUMBIA HYDRO AND POWER AUTHORITY"
        />
      </div>
    </div>
  </div>
  <hr />
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Nature:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.transactionType"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.transactionType"
          title="STATUTORY RIGHT-OF-WAY"
          value="STATUTORY RIGHT-OF-WAY"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registration #:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeNumber"
          title="N35326"
          value="N35326"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered date:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.applicationReceivedDate"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.applicationReceivedDate"
          title="1977-04-14T22:32:00Z"
          value="1977-04-14T22:32:00Z"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered owner:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          title="THE CORPORATION OF DELTA"
          value="THE CORPORATION OF DELTA"
        />
      </div>
    </div>
  </div>
  <hr />
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Nature:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.transactionType"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.transactionType"
          title="MORTGAGE"
          value="MORTGAGE"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registration #:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeNumber"
          title="BL158885"
          value="BL158885"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered date:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.applicationReceivedDate"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.applicationReceivedDate"
          title="1997-05-07T16:51:00Z"
          value="1997-05-07T16:51:00Z"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered owner:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          title="RICHMOND SAVINGS CREDIT UNION"
          value="RICHMOND SAVINGS CREDIT UNION"
        />
      </div>
    </div>
  </div>
  <hr />
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Nature:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.transactionType"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.transactionType"
          title="MORTGAGE"
          value="MORTGAGE"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registration #:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.chargeNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.chargeNumber"
          title="BR248606"
          value="BR248606"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered date:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.applicationReceivedDate"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.applicationReceivedDate"
          title="2001-09-25T18:11:00Z"
          value="2001-09-25T18:11:00Z"
        />
      </div>
    </div>
  </div>
  <hr />
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Nature:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.transactionType"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.transactionType"
          title="STATUTORY RIGHT OF WAY"
          value="STATUTORY RIGHT OF WAY"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registration #:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeNumber"
          title="CA5338545"
          value="CA5338545"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered date:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.applicationReceivedDate"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.applicationReceivedDate"
          title="2016-07-13T21:01:28Z"
          value="2016-07-13T21:01:28Z"
        />
      </div>
    </div>
  </div>
  .c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="col-4"
    >
      <label
        class="c0"
      >
        Registered owner:
      </label>
    </div>
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
          title="ROGERS COMMUNICATIONS INC."
          value="ROGERS COMMUNICATIONS INC."
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col-4"
    />
    <div
      class="col"
    >
      <div
        class="input form-group"
      >
        <input
          class="form-control"
          id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.incorporationNumber"
          name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.incorporationNumber"
          title="BC0921753"
          value="BC0921753"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LtsaTabView component renders as expected when provided valid ltsa data object 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 0.8rem;
}

.c5 .form-label {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  font-weight: bold;
}

.c0 {
  overflow-y: auto;
}

.c2 {
  margin: 1.5rem;
  padding: 1.5rem;
  background-color: white;
  text-align: left;
}

.c3 {
  font-weight: bold;
  border-bottom: 0.2rem solid;
  margin-bottom: 2rem;
}

.c1.c1.c1 input,
.c1.c1.c1 select,
.c1.c1.c1 textarea {
  background: none;
  border: none;
  resize: none;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 0;
}

.c1.c1.c1 .form-label {
  font-weight: bold;
}

<div
    class="c0"
  >
    <form
      action="#"
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Title Details
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Title number:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                disabled=""
                id="input-titleOrders.0.orderedProduct.fieldedData.titleIdentifier.titleNumber"
                name="titleOrders.0.orderedProduct.fieldedData.titleIdentifier.titleNumber"
                title="BL264819"
                value="BL264819"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Land title district:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                disabled=""
                id="input-titleOrders.0.orderedProduct.fieldedData.titleIdentifier.landTitleDistrict"
                name="titleOrders.0.orderedProduct.fieldedData.titleIdentifier.landTitleDistrict"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Taxation authorities:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="textarea input form-group"
            >
              <textarea
                class="form-control"
                disabled=""
                id="input-titleOrders.0.orderedProduct.fieldedData.taxAuthorities"
                name="titleOrders.0.orderedProduct.fieldedData.taxAuthorities"
                title="Delta, City of"
              >
                Delta, City of
              </textarea>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Land
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              PID:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.descriptionsOfLand.0.parcelIdentifier"
                name="titleOrders.0.orderedProduct.fieldedData.descriptionsOfLand.0.parcelIdentifier"
                title="009-212-434"
                value="009-212-434"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Legal Description:
            </label>
          </div>
          <div
            class="col"
          >
            <p>
              LOT 4 EXCEPT: FIRSTLY: PART ON STATUTORY RIGHT OF WAY PLAN 30557;
SECONDLY: PART ON STATUTORY RIGHT OF WAY PLAN 45999A;
DISTRICT LOT 26 GROUP 2 AND SECTION 11 TOWNSHIP 6 NEW WESTMINSTER DISTRICT
PLAN 24843
            </p>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.legalNotationNumber"
              >
                Legal Notations: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.legalNotationNumber"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.legalNotationNumber"
                title="CV1442411"
                value="CV1442411"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.status"
              >
                Status: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.status"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.status"
                title="ACTIVE"
                value="ACTIVE"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.cancellationDate"
              >
                Cancellation date: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.cancellationDate"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.0.cancellationDate"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          />
          <div
            class="col"
          >
            <p>
              THIS CERTIFICATE OF TITLE MAY BE AFFECTED BY THE AGRICULTURAL LAND
COMMISSION ACT, SEE AGRICULTURAL LAND RESERVE PLAN NO. 2
DEPOSITED JULY 30TH, 1974.
            </p>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.legalNotationNumber"
              >
                Legal Notations: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.legalNotationNumber"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.legalNotationNumber"
                title="CV1442412"
                value="CV1442412"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.status"
              >
                Status: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.status"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.status"
                title="ACTIVE"
                value="ACTIVE"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.cancellationDate"
              >
                Cancellation date: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.cancellationDate"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.1.cancellationDate"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          />
          <div
            class="col"
          >
            <p>
              ZONING REGULATION AND PLAN UNDER THE AERONAUTICS ACT (CANADA) FILED
10.2.1981 UNDER NO. T17084 PLAN NO. 61216
            </p>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.legalNotationNumber"
              >
                Legal Notations: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.legalNotationNumber"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.legalNotationNumber"
                title="CV1442414"
                value="CV1442414"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.status"
              >
                Status: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.status"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.status"
                title="ACTIVE"
                value="ACTIVE"
              />
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="c5 input form-group"
            >
              <label
                class="form-label"
                for="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.cancellationDate"
              >
                Cancellation date: 
              </label>
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.cancellationDate"
                name="titleOrders.0.orderedProduct.fieldedData.legalNotationsOnTitle.2.cancellationDate"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          />
          <div
            class="col"
          >
            <p>
              LAND HEREIN CHARGED UNDER THE
MUNICIPAL ACT, PART 25
D.F. D21890
            </p>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Charges, Liens and Interests
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.transactionType"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.transactionType"
                title="STATUTORY RIGHT-OF-WAY"
                value="STATUTORY RIGHT-OF-WAY"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeNumber"
                title="H107642"
                value="H107642"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.applicationReceivedDate"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.applicationReceivedDate"
                title="1972-10-23T21:38:00Z"
                value="1972-10-23T21:38:00Z"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered owner:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.0.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                title="BRITISH COLUMBIA HYDRO AND POWER AUTHORITY"
                value="BRITISH COLUMBIA HYDRO AND POWER AUTHORITY"
              />
            </div>
          </div>
        </div>
        <hr />
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.transactionType"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.transactionType"
                title="STATUTORY RIGHT-OF-WAY"
                value="STATUTORY RIGHT-OF-WAY"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeNumber"
                title="N35326"
                value="N35326"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.applicationReceivedDate"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.applicationReceivedDate"
                title="1977-04-14T22:32:00Z"
                value="1977-04-14T22:32:00Z"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered owner:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.1.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                title="THE CORPORATION OF DELTA"
                value="THE CORPORATION OF DELTA"
              />
            </div>
          </div>
        </div>
        <hr />
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.transactionType"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.transactionType"
                title="MORTGAGE"
                value="MORTGAGE"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeNumber"
                title="BL158885"
                value="BL158885"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.applicationReceivedDate"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.applicationReceivedDate"
                title="1997-05-07T16:51:00Z"
                value="1997-05-07T16:51:00Z"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered owner:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.2.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                title="RICHMOND SAVINGS CREDIT UNION"
                value="RICHMOND SAVINGS CREDIT UNION"
              />
            </div>
          </div>
        </div>
        <hr />
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.transactionType"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.transactionType"
                title="MORTGAGE"
                value="MORTGAGE"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.chargeNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.chargeNumber"
                title="BR248606"
                value="BR248606"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.applicationReceivedDate"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.3.charge.applicationReceivedDate"
                title="2001-09-25T18:11:00Z"
                value="2001-09-25T18:11:00Z"
              />
            </div>
          </div>
        </div>
        <hr />
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.transactionType"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.transactionType"
                title="STATUTORY RIGHT OF WAY"
                value="STATUTORY RIGHT OF WAY"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeNumber"
                title="CA5338545"
                value="CA5338545"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.applicationReceivedDate"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.applicationReceivedDate"
                title="2016-07-13T21:01:28Z"
                value="2016-07-13T21:01:28Z"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered owner:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.lastNameOrCorpName1"
                title="ROGERS COMMUNICATIONS INC."
                value="ROGERS COMMUNICATIONS INC."
              />
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-4"
          />
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.incorporationNumber"
                name="titleOrders.0.orderedProduct.fieldedData.chargesOnTitle.4.charge.chargeOwnershipGroups.0.chargeOwners.0.incorporationNumber"
                title="BC0921753"
                value="BC0921753"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Duplicate Indefeasible Title
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              To:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateDelivery.intendedRecipientLastName"
                name="titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateDelivery.intendedRecipientLastName"
                title="last"
                value="last"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Application #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateIdentifier.documentNumber"
                name="titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateIdentifier.documentNumber"
                title="12345"
                value="12345"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Document district code:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateIdentifier.documentDistrictCode"
                name="titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateIdentifier.documentDistrictCode"
                title="test district code"
                value="test district code"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Certificate text:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateDelivery.certificateText"
                name="titleOrders.0.orderedProduct.fieldedData.duplicateCertificatesOfTitle.0.certificateDelivery.certificateText"
                title="certificate text"
                value="certificate text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Transfers
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Nature:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.disposition"
                name="titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.disposition"
                title="disposition text"
                value="disposition text"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registration #:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.dispositionDate"
                name="titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.dispositionDate"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.titleNumber"
                name="titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.titleNumber"
                title="54321"
                value="54321"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Registered date:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                id="input-titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.landLandDistrict"
                name="titleOrders.0.orderedProduct.fieldedData.titleTransfersOrDispositions.0.landLandDistrict"
                title="district"
                value="district"
              />
            </div>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Pending applications:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                disabled=""
                id="input-parcelInfo.orderedProduct.fieldedData.pendingApplicationCount"
                name="parcelInfo.orderedProduct.fieldedData.pendingApplicationCount"
                title="0"
                value="0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Notes
        </h2>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Miscellaneous notes:
            </label>
          </div>
          <div
            class="col"
          >
            <p>
              SRW PLAN 33784
SRW PLAN 41816
SRW PLAN 50351
DF L24824

            </p>
          </div>
        </div>
        <div
          class="pb-2 row"
        >
          <div
            class="col-4"
          >
            <label
              class="c4"
            >
              Parcel status:
            </label>
          </div>
          <div
            class="col"
          >
            <div
              class="input form-group"
            >
              <input
                class="form-control"
                disabled=""
                id="input-parcelInfo.orderedProduct.fieldedData.status"
                name="parcelInfo.orderedProduct.fieldedData.status"
                title="ACTIVE"
                value="ACTIVE"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
